# tg_javarush

./: .env.example  README.md  config.py  main.py  pyproject.toml
data/: personalities.py  quiz_topics.py
handlers/: __init__.py  basic.py  chatgpt_interface.py  personality_chat.py  quiz.py  random_fact.py
services/: openai_client.py
